k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kafka-stream-sim
  labels:
    app: kafka-stream-sim
    version: v1.0.0
